force-app/main/default/objects/DriveRecorder__c/DriveRecorder__c.object-meta.xml
<CustomObject>
    <label>ドラレコ車載器</label>
    <nameField>
        <label>車載器ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>