force-app/main/default/objects/DriveRecorder__c/fields/CompanyVehicle__c.field-meta.xml
<CustomField>
    <fullName>CompanyVehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社用車</label>
    <referenceTo>CompanyVehicle__c</referenceTo>
    <relationshipLabel>ドラレコ車載器</relationshipLabel>
    <relationshipName>CompanyVehicle_Dashcam</relationshipName>
    <type>Lookup</type>
</CustomField>