force-app/main/default/objects/DriveRecorder__c/fields/Constant_recording1__c.field-meta.xml
<CustomField>
    <fullName>Constant_recording1__c</fullName>
    <label>使用禁止_常時録画</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>okng_hanyo</valueSetName>
    </valueSet>
</CustomField>