force-app/main/default/objects/DriveRecorder__c/fields/Constant_recording__c.field-meta.xml
<CustomField>
    <fullName>Constant_recording__c</fullName>
    <label>常時録画</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>