force-app/main/default/objects/DriveRecorder__c/fields/ControlNo__c.field-meta.xml
<CustomField>
    <fullName>ControlNo__c</fullName>
    <label>旧_管理番号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>