force-app/main/default/objects/DriveRecorder__c/fields/Old_RegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>Old_RegistrationNo__c</fullName>
    <label>旧登録番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>