force-app/main/default/objects/DriveRecorder__c/fields/Onboard_equipmentType__c.field-meta.xml
<CustomField>
    <fullName>Onboard_equipmentType__c</fullName>
    <label>車載器種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TX2000</fullName>
            </value>
            <value>
                <fullName>BX2000</fullName>
            </value>
            <value>
                <fullName>KENWOOD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>