force-app/main/default/objects/DriveRecorder__c/fields/RegisteredNumber__c.field-meta.xml
<CustomField>
    <fullName>RegisteredNumber__c</fullName>
    <formula>CompanyVehicle__r.RegistrationNo__c</formula>
    <label>登録番号（数式）</label>
    <type>Text</type>
</CustomField>