force-app/main/default/objects/DriveRecorder__c/fields/RegistrationNo_beforetransfer__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNo_beforetransfer__c</fullName>
    <label>乗せ換え前の車両登録番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>