force-app/main/default/objects/DriveRecorder__c/fields/VehicleAffiliation__c.field-meta.xml
<CustomField>
    <fullName>VehicleAffiliation__c</fullName>
    <formula>TEXT(CompanyVehicle__r.Base__c)</formula>
    <label>車両所属（数式）</label>
    <type>Text</type>
</CustomField>