force-app/main/default/objects/DriveRecorder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Canceled__c</columns>
    <columns>Onboard_equipmentType__c</columns>
    <columns>Constant_recording__c</columns>
    <columns>NAME</columns>
    <columns>RegistrationNo__c</columns>
    <columns>Vehicle_affiliation__c</columns>
    <columns>RegistrationNo_beforetransfer__c</columns>
    <columns>remarks__c</columns>
    <columns>control_no__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>